tests/ui/no-impl.stderr
error[E0599]: no method named `eyre_kind` found for reference `&Error` in the current scope
 --> $DIR/no-impl.rs:7:13
  |
7 |     let _ = eyre!(Error);
  |             ^^^^^^^^^^^^ method not found in `&Error`
  |
  = note: the method `eyre_kind` exists but the following trait bounds were not satisfied:
          `&Error : eyre::kind::AdhocKind`
          `&Error : eyre::kind::TraitKind`
          `Error : eyre::kind::TraitKind`
  = help: items from traits can only be used if the trait is implemented and in scope
  = note: the following traits define an item `eyre_kind`, perhaps you need to implement one of them:
          candidate #1: `eyre::kind::AdhocKind`
          candidate #2: `eyre::kind::TraitKind`
          candidate #3: `eyre::kind::BoxedKind`
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
